--- a/atf1508/nespc.qsf
+++ b/atf1508/nespc.qsf
@@ -46,66 +46,68 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name VERILOG_FILE nespc.v
 set_global_assignment -name MAX7000_DEVICE_IO_STANDARD TTL
-set_location_assignment PIN_44 -to SEL[6]
-set_location_assignment PIN_76 -to MMU_A[2]
-set_location_assignment PIN_50 -to CPU_D[1]
-set_location_assignment PIN_30 -to CI_RAM_nCE
-set_location_assignment PIN_28 -to FDC_nCE
-set_location_assignment PIN_21 -to PMU_A[0]
+set_location_assignment PIN_4 -to FDC_nCE
+set_location_assignment PIN_5 -to MMU_A[6]
+set_location_assignment PIN_6 -to MMU_A[4]
+set_location_assignment PIN_8 -to MMU_A[2]
+set_location_assignment PIN_9 -to MMU_A[3]
+set_location_assignment PIN_10 -to MMU_A[0]
+set_location_assignment PIN_11 -to MMU_A[5]
+set_location_assignment PIN_12 -to CPU_nWR
+set_location_assignment PIN_15 -to MMU_A[1]
+set_location_assignment PIN_16 -to SEL[4]
+set_location_assignment PIN_17 -to SEL[5]
+set_location_assignment PIN_18 -to SEL[7]
+set_location_assignment PIN_20 -to SEL[6]
+set_location_assignment PIN_21 -to SEL[2]
+set_location_assignment PIN_22 -to SEL[3]
+set_location_assignment PIN_24 -to CPU_nRD
+set_location_assignment PIN_25 -to SEL[1]
+set_location_assignment PIN_27 -to SEL[0]
+set_location_assignment PIN_28 -to PRG_RAM_nCE
+set_location_assignment PIN_29 -to PRG_ROM_nCE
+set_location_assignment PIN_30 -to CHR_ROM_nCE
+set_location_assignment PIN_31 -to CHR_RAM_nCE
 set_location_assignment PIN_33 -to PPU_A13
-set_location_assignment PIN_65 -to CPU_D[6]
-set_location_assignment PIN_61 -to CPU_A[4]
-set_location_assignment PIN_37 -to SEL[1]
-set_location_assignment PIN_17 -to PMU_A[5]
-set_location_assignment PIN_12 -to MMU_A[3]
-set_location_assignment PIN_83 -to SYSCLK
-set_location_assignment PIN_55 -to CPU_D[2]
+set_location_assignment PIN_34 -to PMU_A[0]
+set_location_assignment PIN_35 -to PMU_A[2]
+set_location_assignment PIN_36 -to PMU_A[3]
+set_location_assignment PIN_37 -to PMU_A[5]
+set_location_assignment PIN_39 -to PMU_A[4]
+set_location_assignment PIN_40 -to PMU_A[6]
+set_location_assignment PIN_41 -to PMU_A[1]
+set_location_assignment PIN_44 -to PPU_A12
+set_location_assignment PIN_45 -to CI_RAM_A10
+set_location_assignment PIN_46 -to CI_RAM_nCE
+set_location_assignment PIN_48 -to CPU_RW
+set_location_assignment PIN_49 -to nROMSEL
+set_location_assignment PIN_50 -to CPU_D[1]
 set_location_assignment PIN_51 -to CPU_A[0]
-set_location_assignment PIN_41 -to SEL[3]
-set_location_assignment PIN_22 -to PMU_A[1]
-set_location_assignment PIN_34 -to PPU_A12
-set_location_assignment PIN_68 -to CPU_D[7]
-set_location_assignment PIN_64 -to CPU_A[5]
-set_location_assignment PIN_15 -to PMU_A[6]
-set_location_assignment PIN_45 -to SEL[5]
-set_location_assignment PIN_10 -to MMU_A[4]
-set_location_assignment PIN_81 -to M2
-set_location_assignment PIN_57 -to CPU_D[3]
-set_location_assignment PIN_8 -to PRG_ROM_nCE
-set_location_assignment PIN_54 -to CPU_A[1]
-set_location_assignment PIN_20 -to PMU_A[2]
-set_location_assignment PIN_49 -to CPU_nWR
-set_location_assignment PIN_46 -to SEL[7]
-set_location_assignment PIN_11 -to MMU_A[0]
-set_location_assignment PIN_67 -to CPU_A[6]
-set_location_assignment PIN_35 -to CHR_ROM_nCE
-set_location_assignment PIN_39 -to SEL[0]
-set_location_assignment PIN_5 -to CPU_nRD
-set_location_assignment PIN_75 -to MMU_A[5]
-set_location_assignment PIN_25 -to nROMSEL
-set_location_assignment PIN_60 -to CPU_D[4]
-set_location_assignment PIN_24 -to PRG_RAM_nCE
-set_location_assignment PIN_56 -to CPU_A[2]
-set_location_assignment PIN_40 -to SEL[2]
-set_location_assignment PIN_18 -to PMU_A[3]
-set_location_assignment PIN_77 -to MMU_A[1]
 set_location_assignment PIN_52 -to CPU_D[0]
-set_location_assignment PIN_36 -to CHR_RAM_nCE
-set_location_assignment PIN_48 -to SEL[4]
-set_location_assignment PIN_9 -to MMU_A[6]
-set_location_assignment PIN_31 -to CPU_RW
-set_location_assignment PIN_63 -to CPU_D[5]
+set_location_assignment PIN_54 -to CPU_A[1]
+set_location_assignment PIN_55 -to CPU_D[2]
+set_location_assignment PIN_56 -to CPU_A[2]
+set_location_assignment PIN_57 -to CPU_D[3]
 set_location_assignment PIN_58 -to CPU_A[3]
-set_location_assignment PIN_16 -to PMU_A[4]
-set_location_assignment PIN_27 -to FDC_RST
-set_global_assignment -name SDC_FILE nespc.sdc
-set_location_assignment PIN_74 -to CPU_A[12]
-set_location_assignment PIN_79 -to CPU_A[8]
-set_location_assignment PIN_73 -to CPU_A[13]
-set_location_assignment PIN_80 -to CPU_A[9]
-set_location_assignment PIN_70 -to CPU_A[14]
-set_location_assignment PIN_6 -to CPU_A[10]
-set_location_assignment PIN_4 -to CPU_A[11]
+set_location_assignment PIN_60 -to CPU_D[4]
+set_location_assignment PIN_61 -to CPU_A[4]
+set_location_assignment PIN_63 -to CPU_D[5]
+set_location_assignment PIN_64 -to CPU_A[5]
+set_location_assignment PIN_65 -to CPU_D[6]
+set_location_assignment PIN_67 -to CPU_A[6]
+set_location_assignment PIN_68 -to CPU_D[7]
 set_location_assignment PIN_69 -to CPU_A[7]
+set_location_assignment PIN_70 -to CPU_A[14]
+set_location_assignment PIN_73 -to CPU_A[13]
+set_location_assignment PIN_74 -to CPU_A[12]
+set_location_assignment PIN_75 -to CPU_A[8]
+set_location_assignment PIN_76 -to CPU_A[9]
+set_location_assignment PIN_77 -to CPU_A[10]
+set_location_assignment PIN_79 -to CPU_A[11]
+set_location_assignment PIN_80 -to FDC_RST
+set_location_assignment PIN_81 -to M2
+set_location_assignment PIN_83 -to SYSCLK
+set_global_assignment -name SOURCE_FILE nespc.qsf
+set_global_assignment -name VERILOG_FILE nespc.v
+set_global_assignment -name SDC_FILE nespc.sdc
